Fixed issue where ar-card--md was too big on phone display

--- a/sass/refresh-styles.scss
+++ b/sass/refresh-styles.scss
@@ -1419,13 +1419,11 @@ label:hover:before {
 .ar-card--sm {
   min-height: 300px;
   max-width: 350px;
-  width: 350px;
 }
 
 .ar-card--md {
   min-height: 300px;
   max-width: 500px;
-  width: 500px;
 }
 
 // .ar-card--full {
